--- a/html/themes/custom/partners_colab/components/01-base/text/_text.scss
+++ b/html/themes/custom/partners_colab/components/01-base/text/_text.scss
@@ -107,13 +107,13 @@ sup {
 }
 
 sup {
-  top: -0.5em;
+  top: -.5em;
 }
 
 sub {
-  bottom: -0.25em;
+  bottom: -.25em;
 }
 
 ul {
-  list-style: none !important; 
+  list-style: none !important;
 }
