--- a/html/themes/custom/partners_colab/components/03-molecules/search-form/_search-form.scss
+++ b/html/themes/custom/partners_colab/components/03-molecules/search-form/_search-form.scss
@@ -18,7 +18,7 @@ Use the #search-form id on `search-form` components.
     </div>
 
 */
-
-#search-form {
+// TODO: update from ID to class
+.search-form {
   padding: 1rem;
 }
