--- a/html/themes/custom/partners_colab/components/00-config/variables/_colours.scss
+++ b/html/themes/custom/partners_colab/components/00-config/variables/_colours.scss
@@ -2,19 +2,20 @@
 //including special calls to the module for printing color
 /* @start color */
 :root {
-    --black: #000000;
-    --white: #ffffff;
-    --grey: #6C6463;
-    --op-grey: rgba(#6C6463, 0.3);
-    --primary-colour: #002F6C;
-    --secondary-colour: #D0021B;
-    }
+  --black: #000000;
+  --white: #FFFFFF;
+  --grey: #6C6463;
+  --op-grey: rgba(#6C6463, .3);
+  --primary-colour: #002F6C;
+  --secondary-colour: #D0021B;
+}
 /* @end color */
 
 // color variables
 $black: #000000 !default;
-$white: #ffffff !default;
+$white: #FFFFFF !default;
 $grey: #6C6463 !default;
-$op-grey: rgba($grey, 0.3);
+$op-grey: rgba($grey, .3);
 $primary-colour: #002F6C !default;
 $secondary-colour: #D0021B !default;
+$transparent: rgba(0, 0, 0, 0);
