--- a/html/themes/custom/partners_colab/components/01-base/_print.scss
+++ b/html/themes/custom/partners_colab/components/01-base/_print.scss
@@ -1,6 +1,6 @@
 // NOTE: keeping this in for now because of the bootstrap specific comment near the bottom
 
-/*! Source: https://github.com/h5bp/html5-boilerplate/blob/master/src/css/main.css */
+// ! Source: https://github.com/h5bp/html5-boilerplate/blob/master/src/css/main.css
 
 // ==========================================================================
 // Print styles.
@@ -8,96 +8,101 @@
 // ==========================================================================
 
 @media print {
-    *,
-    *:before,
-    *:after {
-        background: transparent !important;
-        color: #000 !important; // Black prints faster: h5bp.com/s
-        box-shadow: none !important;
-        text-shadow: none !important;
+  *,
+  *:before,
+  *:after {
+    background: transparent !important;
+    color: $black !important; // Black prints faster: h5bp.com/s
+    box-shadow: none !important;
+    text-shadow: none !important;
+  }
+
+  a,
+  a:visited {
+    text-decoration: underline;
+  }
+
+  a[href]:after {
+    content: ' (' attr(href) ')';
+  }
+
+  abbr[title]:after {
+    content: ' (' attr(title) ')';
+  }
+
+  // Don't show links that are fragment identifiers,
+  // or use the `javascript:` pseudo protocol
+  a[href^='#']:after,
+  a[href^='javascript:']:after {
+    content: '';
+  }
+
+  pre,
+  blockquote {
+    border: 1px solid $op-grey;
+    page-break-inside: avoid;
+  }
+
+  thead {
+    display: table-header-group; // h5bp.com/t
+  }
+
+  tr,
+  img {
+    page-break-inside: avoid;
+  }
+
+  img {
+    max-width: 100% !important;
+  }
+
+  p,
+  h2,
+  h3 {
+    orphans: 3;
+    widows: 3;
+  }
+
+  h2,
+  h3 {
+    page-break-after: avoid;
+  }
+
+  // Bootstrap specific changes start
+
+  // Bootstrap components
+  .navbar {
+    display: none;
+  }
+
+  .btn,
+  .dropup > .btn {
+
+    > .caret {
+      border-top-color: $black !important;
     }
 
-    a,
-    a:visited {
-        text-decoration: underline;
-    }
+  }
 
-    a[href]:after {
-        content: " (" attr(href) ")";
-    }
+  .label {
+    border: 1px solid $black;
+  }
 
-    abbr[title]:after {
-        content: " (" attr(title) ")";
-    }
+  .table {
+    border-collapse: collapse !important;
 
-    // Don't show links that are fragment identifiers,
-    // or use the `javascript:` pseudo protocol
-    a[href^="#"]:after,
-    a[href^="javascript:"]:after {
-        content: "";
+    td,
+    th {
+      background-color: $white !important;
     }
+  }
 
-    pre,
-    blockquote {
-        border: 1px solid #999;
-        page-break-inside: avoid;
+  .table-bordered {
+    th,
+    td {
+      border: 1px solid $white !important;
     }
+  }
 
-    thead {
-        display: table-header-group; // h5bp.com/t
-    }
-
-    tr,
-    img {
-        page-break-inside: avoid;
-    }
-
-    img {
-        max-width: 100% !important;
-    }
-
-    p,
-    h2,
-    h3 {
-        orphans: 3;
-        widows: 3;
-    }
-
-    h2,
-    h3 {
-        page-break-after: avoid;
-    }
-
-    // Bootstrap specific changes start
-
-    // Bootstrap components
-    .navbar {
-        display: none;
-    }
-    .btn,
-    .dropup > .btn {
-        > .caret {
-            border-top-color: #000 !important;
-        }
-    }
-    .label {
-        border: 1px solid #000;
-    }
-
-    .table {
-        border-collapse: collapse !important;
-
-        td,
-        th {
-            background-color: #fff !important;
-        }
-    }
-    .table-bordered {
-        th,
-        td {
-            border: 1px solid #ddd !important;
-        }
-    }
-
-    // Bootstrap specific changes end
+  // Bootstrap specific changes end
 }
