--- a/html/themes/custom/partners_colab/components/01-base/animation/_component-animation.scss
+++ b/html/themes/custom/partners_colab/components/01-base/animation/_component-animation.scss
@@ -10,14 +10,20 @@
 .fade {
   opacity: 0;
   transition: opacity .15s linear;
+
   &.in {
     opacity: 1;
   }
+
 }
 
 .collapse {
   display: none;
-  &.in      { display: block; }
+
+  &.in {
+    display: block;
+  }
+
 }
 
 .collapsing {
@@ -25,6 +31,6 @@
   height: 0;
   overflow: hidden;
   transition-property: height, visibility;
-  transition-duration: 0.35s;
+  transition-duration: .35s;
   transition-timing-function: ease;
 }
