--- a/html/themes/custom/partners_colab/components/02-atoms/chips/_chips.scss
+++ b/html/themes/custom/partners_colab/components/02-atoms/chips/_chips.scss
@@ -13,8 +13,8 @@ Use  a chip for taxonomy or tag indicators throughout the theme
 */
 
 //our linked chips
-a.chip {
-    @include font ($body-font-default, 1.6rem, $grey, null, 2.3rem);
-    @include vertical-margin($small-margin);
-    text-decoration: none;
-  }
+.chip {
+  @include font ($body-font-default, 1.6rem, $grey, null, 2.3rem);
+  @include vertical-margin($small-margin);
+  text-decoration: none;
+}
