--- a/html/themes/custom/partners_colab/components/04-organisms/blocks/_section--bottom-content-view-block.scss
+++ b/html/themes/custom/partners_colab/components/04-organisms/blocks/_section--bottom-content-view-block.scss
@@ -1,56 +1,56 @@
-section.bottom-content-view-block {
-    // TODO see if this is a candidate for display: subgrid;
-    display: grid;
-    @include vertical-margin ($section-margin);
+// .bottom-content-view-block {
+//   // TODO see if this is a candidate for display: subgrid;
+//   display: grid;
+//   @include vertical-margin ($section-margin);
 
-    grid-template-columns: 1fr;   
-    grid-template-areas:   
-    "bottom-content-title"
-    "bottom-content-view";
-  
-    @include breakpoint (tablet) {
-      grid-template-columns: minmax(450px, 650px) minmax(250px, 1fr);   
-      grid-template-areas:   
-      "bottom-content-title bottom-content-title"
-      "bottom-content-view bottom-content-view";
-    }
-  
-    @include breakpoint (desktop) {
-      grid-template-columns: 1fr auto minmax(450px, 650px) minmax(250px, 1fr) 1fr;     
-      grid-template-areas:   
-      "... bottom-content-title bottom-content-title bottom-content-title ..."
-      "... bottom-content-view bottom-content-view bottom-content-view ...";
-    }
-    // ($col-start, $col-end, $row-start, $row-end)
-    .section-title--bottom-content {
-        grid-area: bottom-content-title;
-        //fallbacks for IE
-        @include grid-child (1, 2, 1, 2);
+//   grid-template-columns: 1fr;
+//   grid-template-areas:
+//   "bottom-content-title"
+//   "bottom-content-view";
 
-        @include breakpoint (tablet) {
-          @include grid-child (1, 3, 1, 2);
-        }
+//   @include breakpoint (tablet) {
+//     grid-template-columns: minmax(450px, 650px) minmax(250px, 1fr);
+//     grid-template-areas:
+//     "bottom-content-title bottom-content-title"
+//     "bottom-content-view bottom-content-view";
+//   }
 
-        @include breakpoint (desktop) {
-          @include grid-child (2, 5, 1, 2);
-        }
-        // background-color: lightpink;
-      }
+//   @include breakpoint (desktop) {
+//     grid-template-columns: 1fr auto minmax(450px, 650px) minmax(250px, 1fr) 1fr;
+//     grid-template-areas:
+//     "... bottom-content-title bottom-content-title bottom-content-title ..."
+//     "... bottom-content-view bottom-content-view bottom-content-view ...";
+//   }
+//   // ($col-start, $col-end, $row-start, $row-end)
+//   .section-title--bottom-content {
+//     grid-area: bottom-content-title;
+//     //fallbacks for IE
+//     @include grid-child (1, 2, 1, 2);
 
-    // ($col-start, $col-end, $row-start, $row-end)
-    .view {
-        grid-area: bottom-content-view;
-                //fallbacks for IE
-        @include grid-child (1, 2, 2, 3);
+//     @include breakpoint (tablet) {
+//       @include grid-child (1, 3, 1, 2);
+//     }
 
-        @include breakpoint (tablet) {
-          @include grid-child (1, 3, 2, 3);
-        }
+//     @include breakpoint (desktop) {
+//       @include grid-child (2, 5, 1, 2);
+//     }
+//     // background-color: lightpink;
+//   }
 
-        @include breakpoint (desktop) {
-          @include grid-child (2, 5, 2, 3);
-        }
-        // background-color: lightpink;
-      }
+//   // ($col-start, $col-end, $row-start, $row-end)
+//   .view {
+//     grid-area: bottom-content-view;
+//             //fallbacks for IE
+//     @include grid-child (1, 2, 2, 3);
 
-    }
+//     @include breakpoint (tablet) {
+//       @include grid-child (1, 3, 2, 3);
+//     }
+
+//     @include breakpoint (desktop) {
+//       @include grid-child (2, 5, 2, 3);
+//     }
+//     // background-color: lightpink;
+//   }
+
+// }
