--- a/html/themes/custom/partners_colab/components/scss/partners-colab.scss
+++ b/html/themes/custom/partners_colab/components/scss/partners-colab.scss
@@ -1,14 +1,4 @@
 // This file globs all partials from folders in the SCSS root. You shouldn't need to touch anything here.
-// Note: There seem to be some issues with $variables and globbing, and for that reason, we're keeping
-// Import our Utilities
-// @import '../00-utilities/_reboot.scss';
-// @import '../00-utilities/_global-mixins.scss';
-// @import '../00-utilities/_breakpoints.scss';
-// @import '../00-utilities/_colours.scss';
-// @import '../00-utilities/_margin.scss';
-// @import '../00-utilities/_padding.scss';
-// @import '../00-utilities/_pseudo.scss';
-// @import '../00-utilities/_typography.scss';
 
 // Import
 @import '../00-config/variables/*';
@@ -19,5 +9,5 @@
 @import '../03-molecules/**/*';
 @import '../04-organisms/**/*';
 
-@import '../../style-guide/_style-guide.scss';
+@import '../../style-guide/*';
 
